--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
     "ejs": "^3.1.10",
     "eslint": "^9.13.0",
     "express": "^4.21.1",
-    "firebase": "^10.14.1",
+    "firebase": "^11.0.1",
     "firebase-admin": "^12.6.0",
-    "firebase-tools": "^13.22.1",
+    "firebase-tools": "^1.2.0",
     "gh": "^1.11.14",
+    "github": "^14.0.0",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.15",
     "powershell": "^2.3.2",
