--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "ejs": "^3.1.10",
     "eslint": "^9.13.0",
     "express": "^4.21.1",
+    "express-validator": "^7.2.0",
     "firebase": "^9.0.0",
     "firebase-admin": "^12.6.0",
     "firebase-tools": "^1.2.0",
