--- a/firebase.json
+++ b/firebase.json
@@ -1,14 +1,12 @@
 {
-    "hosting": {
-      "public": "/public",
-      "rewrites": [
-        {
-          "source": "**",
-          "destination": "/index.html" 
-        }
-      ],
-      "ignore": ["firebase.json", "**/.*", "**/node_modules/**"]
-    },
+  "hosting": {
+    "public": "public/app",
+      "ignore": [
+        "firebase.json",
+        "**/.*",
+        "**/node_modules/**"
+    ]
+  },
     "database": {
       "rules": "database.rules.json"
     },
