--- a/firebase.json
+++ b/firebase.json
@@ -1,30 +1,33 @@
 {
-    "hosting": {
-      "public": "/public",
-      "rewrites": [
-        {
-          "source": "**",
-          "destination": "/index.html" 
-        }
-      ],
-      "ignore": ["firebase.json", "**/.*", "**/node_modules/**"]
-    },
+  "database": {
+    "rules": "database.rules.json"
+  },
+  "emulators": {
     "database": {
-      "rules": "database.rules.json"
+      "host": "127.0.0.1",
+      "port": 9000
     },
-    "emulators": {
-      "ui": {
-        "host": "127.0.0.1",
-        "port": 5002
-      },
-      "database": {
-        "host": "127.0.0.1",
-        "port": 9000
-      }
-    },
-    "singleProjectMode": false,
-    "remoteconfig": {
-      "template": "remoteconfig.template.json"
+    "ui": {
+      "host": "127.0.0.1",
+      "port": 5002
     }
-  }
-  
+  },
+  "hosting": {
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+    "public": "/public",
+    "rewrites": [
+      {
+        "destination": "/public/app/index.html",
+        "source": "**"
+      }
+    ]
+  },
+  "remoteconfig": {
+    "template": "remoteconfig.template.json"
+  },
+  "singleProjectMode": true
+}
