--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "firebase-admin": "^12.6.0",
     "firebase-tools": "^1.2.0",
     "jsonwebtoken": "^9.0.2",
-    "nodemailer": "^6.9.15"
+    "nodemailer": "^6.9.15",
+    "vim": "^0.1.0"
   },
   "name": "final-workspace",
   "version": "1.0.0",
