--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -21,3 +21,97 @@ runConfig:
   # See https://firebase.google.com/docs/app-hosting/configure#secret-parameters
   # - variable: MY_SECRET
   #   secret: mySecretRef
+runtime: nodejs20
+
+# Optional: instance class and scaling settings
+instance_class: F2
+automatic_scaling:
+  target_cpu_utilization: 0.65
+  min_instances: 1
+  max_instances: 5
+
+runtime: nodejs
+env: flex
+entrypoint: npm start
+
+# Optional settings
+manual_scaling:
+  instances: 1
+    "name": "Pdubbs-Solutions",
+    "on": {
+        "push": {
+            "branches": ["main"]
+        },
+        "pull_request": {
+            "branches": ["main"]
+        }
+    },
+    "jobs": {
+        "build": {
+            "runs-on": "ubuntu-latest",
+            "steps": [
+                {
+                    "name": "Checkout code",
+                    "uses": "actions/checkout@v2"
+                },
+                {
+                    "name": "Set up Node.js",
+                    "uses": "actions/setup-node@v2",
+                    "with": {
+                        "node-version": "14"
+                    }
+                },
+                {
+                    "name": "Install dependencies",
+                    "run": "npm install"
+                },
+                {
+                    "name": "Run tests",
+                    "run": "npm test"
+                }
+            ]
+        }
+    }
+
+name: Deploy Jekyll with GitHub Pages dependencies preinstalled
+
+on:
+  push:
+    branches: ["main"]
+  workflow_dispatch:
+
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Setup Pages
+        uses: actions/configure-pages@v3
+      - name: Build with Jekyll
+        uses: actions/jekyll-build-pages@v1
+        with:
+          source: ./
+          destination: ./_site
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v1
+
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v1
