--- a/.env
+++ b/.env
@@ -1,3 +1,13 @@
 API_KEY=AIzaSyAwwveYRqdPTsnLosZJzR8L-jk8DjzwvLo
 REACT_APP_BASE_URI=http://localhost:5000
 REACT_APP_PROXY_URI=http://localhost:5000
+NODE_PATH=./node_modules
+
+FIREBASE_API_KEY=AIzaSyAwwveYRqdPTsnLosZJzR8L-jk8DjzwvLo
+FIREBASE_AUTH_DOMAIN=pdubbs-final.firebaseapp.com
+FIREBASE_DATABASE_URL=https://pdubbs-final-default-rtdb.firebaseio.com
+FIREBASE_PROJECT_ID=pdubbs-final
+FIREBASE_STORAGE_BUCKET=pdubbs-final.firebasestorage.app
+FIREBASE_MESSAGING_=980654735004
+FIREBASE_APP_ID=1:980654735004:web:14e135cb19c59fa3203759
+FIREBASE_HOSTING_TARGET=https://pdssolutions.web.app
