--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.16",
     "router": "^1.3.8",
+    "ruby": "^0.6.1",
     "superstatic": "^9.0.3",
     "vim": "^0.1.0"
   },
