--- a/public/.github/workflows/static.yml
+++ b/public/.github/workflows/static.yml
@@ -27,11 +27,8 @@ jobs:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/javascript-action@a824008085750b8e136effc585c3cd6082bd575f
-      - uses: actions/javascript-action@v1.0.1
-      - uses: actions/javascript-action@main
       - name: Checkout
         uses: actions/checkout@v4
       - name: Setup Pages
@@ -40,7 +37,7 @@ jobs:
         uses: actions/upload-pages-artifact@v3
         with:
           # Upload entire repository
-          path: "./public/app/"
+          path: '.'
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
