--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
     "@visto9259/php-webpack-plugin": "^1.1.0",
+    "buffer": "^6.0.3",
     "connect-flash": "^0.1.1",
+    "crypto-browserify": "^3.12.1",
     "ejs": "^3.1.10",
     "eslint": "^8.57.1",
     "express": "^4.21.1",
@@ -9,18 +11,25 @@
     "express-validator": "^7.2.0",
     "https": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.8.0",
     "nano": "^10.1.4",
     "nodemailer": "^6.9.16",
     "npx": "^10.2.2",
     "os-browserify": "^0.3.0",
     "passport": "^0.7.0",
+    "path-browserify": "^1.0.1",
+    "pause": "^0.1.0",
     "php": "^1.1.0",
     "python": "^0.0.4",
     "python3": "^0.0.1",
     "react-scripts": "^5.0.1",
     "router": "^1.3.8",
     "ruby": "^0.6.1",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "superstatic": "^9.0.3",
+    "url": "^0.11.4",
+    "util": "^0.12.5",
     "vim": "^0.1.0",
     "vite-plugin-windicss": "^1.9.3",
     "windicss": "^3.5.6",
