--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,48 @@
    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
    "version": "0.2.0",
    "configurations": [
+      {
+         "name": "Launch Chrome",
+         "request": "launch",
+         "type": "chrome",
+         "url": "http://localhost:5000",
+         "webRoot": "${workspaceFolder}"
+      },
+      {
+         "name": "PowerShell Launch Script",
+         "type": "PowerShell",
+         "request": "launch",
+         "script": "Enter path or command to execute, for example, ${workspaceFolder}/src/foo.ps1 or Invoke-Pester",
+         "cwd": "${cwd}"
+      },
+      {
+         "name": "Launch built-in server",
+         "type": "php",
+         "request": "launch",
+         "runtimeArgs": [
+            "-S",
+            "localhost:5000",
+            "-t",
+            "."
+         ],
+         "port": 9003,
+         "serverReadyAction": {
+            "action": "openExternally"
+         }
+      },
+      {
+         "name": "Launch via NPM",
+         "request": "launch",
+         "runtimeArgs": [
+            "run-script",
+            "debug"
+         ],
+         "runtimeExecutable": "npm",
+         "skipFiles": [
+            "<node_internals>/**"
+         ],
+         "type": "node"
+      },
       
       {
          "name": "PowerShell Launch Script",
@@ -37,11 +79,6 @@
          ],
          "type": "node"
       },
-      {
-         "name": "Python Debugger: Module",
-         "type": "debugpy",
-         "request": "launch",
-         "module": "src\\ utils\\flask"
-      }
+
    ]
 }
