--- a/package.json
+++ b/package.json
@@ -90,5 +90,5 @@
   "bugs": {
     "url": "https://github.com/PdubbsSolutions/Pdubbs-Solutions/issues"
   },
-  "homepage": "https://github.com/PdubbsSolutions/Pdubbs-Solutions#index.php"
+  "homepage": "https://github.com/PdubbsSolutions/Pdubbs-Solutions#index.html"
 }
