--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "mongoose": "^8.8.0",
     "nano": "^10.1.4",
     "nodemailer": "^6.9.16",
-    "npx": "^10.2.2",
+    "npx": "^3.0.0",
     "os-browserify": "^0.3.0",
     "passport": "^0.7.0",
     "path-browserify": "^1.0.1",
@@ -22,12 +22,13 @@
     "php": "^1.1.0",
     "python": "^0.0.4",
     "python3": "^0.0.1",
-    "react-scripts": "^5.0.1",
-    "router": "^1.3.8",
+    "react-scripts": "^3.0.1",
+    "redirect": "^0.2.0",
+    "router": "^2.0.0",
     "ruby": "^0.6.1",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
-    "superstatic": "^9.0.3",
+    "superstatic": "^1.2.3",
     "url": "^0.11.4",
     "util": "^0.12.5",
     "vim": "^0.1.0",
