--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,7 @@ logs/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
+.README.md*
 
 # Environment variables
 .env.local
@@ -53,6 +53,7 @@ Icon?
 Desktop.ini
 *.DS_Store
 .Trash-*
+*A:\
 
 #config
 config/venv/
