--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,7 +3,7 @@
         "module": "CommonJS",
         "moduleResolution": "node",
         "target": "es6",
-        "baseUrl": "./",
+        "baseUrl": "./https://pdubbssolutions.ca",
         "jsx": "react",
         "strict": true,
         "esModuleInterop": true,
