--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     "util": "^0.12.5",
     "vim": "^0.1.0",
     "vite-plugin-windicss": "^1.9.3",
+    "webpack":"^5.96.1",
+     "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.1.0",
     "windicss": "^3.5.6",
     "windicss-webpack-plugin": "^1.8.0"
   },
