--- a/package.json
+++ b/package.json
@@ -52,8 +52,8 @@
   "scripts": {
     "build": "webpack",
     "home": "http-server ./index.html -p 5000",
-    "start": "node src/app.js",
-    "main": "node src/app.js"
+    "start": "node public/app.js",
+    "main": "node public/app.js"
   },
   "repository": {
     "type": "git",
